# orient

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  agent-skills-pipeline.md  lib-adaptation-notes.md  orient-conceptual-notes-stigmergy.md  orient-conceptual-notes.md  orient-spec-seed.md  pyproject.toml  spec-brief.md  spec-config.md  spec-day-close.md  spec-diff.md  spec-note.md  spec-orient.md  spec-session-note.md  spec-skill.md  spec-status.md  spec-sync.md  spec-topic.md  spec.md
orient/: brief.py  cli.py  config.py  day_close.py  llm.py  note.py  paths.py  preflight.py  session_note.py  skill.py  state.py  status.py  sync.py
orient/lib/: note_parser.py  preflight.py
orient/skills/day-closer/: SKILL.md
orient/skills/day-starter/: SKILL.md
orient/skills/session-closer/: SKILL.md
orient/skills/topic-briefer/: SKILL.md
orient/templates/: checkpoint_prompt.md  close_prompt.md
tests/: conftest.py  test_brief.py  test_config.py  test_day_close.py  test_llm.py  test_note.py  test_session_note.py  test_skill.py  test_status.py  test_sync.py  test_topic.py
