[project]
name = "orient"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli-w>=1.0",
    "typer>=0.12",
]

[project.scripts]
orient = "orient.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "sync: orient sync subsystem",
    "status: orient status subsystem",
    "note: orient note subsystem",
    "config: orient config subsystem",
    "brief: orient brief subsystem",
    "session_note: orient session-note subsystem",
]
